added nav and banner and made it resposive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/cc3cb5c0c8.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    
+
+    <header class="mx-[2rem] my-[.5rem] lg:mx-[10rem] lg:my-[2rem]">
+
+        <nav class="flex justify-between items-center lg:mb-[7rem]">
+            <div>
+                <img class="w-[8.5rem] h-[5rem]" src="assets/logo.png" alt="">
+            </div>
+            <div>
+                <ul class="flex  list-none text-none gap-[3rem]">
+                    <li class="hidden lg:flex ">home</li>
+                    <li class="hidden lg:flex" >shop</li>
+                    <li class="hidden lg:flex">about us</li>
+                    <li><i class="fa-solid fa-cart-shopping"></i> Cart</li> 
+                </ul>
+            </div>
+        </nav>
+
+        <div class="flex items-end sm:flex-col lg:flex-row lg:justify-between"  >
+            <div class="order-2 w-full lg:w-[35rem] lg:order-1 ">
+                <h4 class="font-bold text-[1.5rem] lg:text-[4.1rem] lg: mb-[.8rem]">ALWAYS <span class="text-orange-500">FRESS <br> FLOWERS</span></h4>
+                <h5 class="text-[.8rem] lg:text-[1.5rem]">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for
+                    any occasion. </h>
+            </div>
+            <div class="order-1 lg:order-2 ">
+                <img class="w-full" src="assets/hero-flower.png" alt="">
+            </div>
+
+
+        </div>
+
+    </header>
+    <main>
+        
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
