added the plant collection part

--- a/index.html
+++ b/index.html
@@ -42,7 +42,65 @@
         </div>
 
     </header>
-    <main>
+    <main class="mx-[2rem] my-[.5rem] lg:mx-[10rem] lg:my-[2rem]">
+        <div class="text-center mb-[3rem]">
+            <h3 class="lg:fort-bold text-[3.1rem]"><Span class="text-orange-500">Our</Span> Plants</h3>
+            <h4 class="text-[1.4rem]">Indulge your senses with the beauty and fragrance of our 
+                fresh flower shop. From <br>classic roses to exotic blooms, 
+                we offer a wide variety of fresh.</h4>
+        </div>
+
+        <div class=" grid grid-cols-4 gap-5">
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            <div class="card text-center w-[17rem]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
+                <h4 class="text-[1.3rem] font-bold">20$</h4>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+            </div>
+            
+        </div>
         
     </main>
     <footer>
