made the site resposive for mobile and pc screens

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
         </nav>
 
-        <div class="flex items-end sm:flex-col lg:flex-row lg:justify-between"  >
+        <div class="flex items-end flex-col lg:flex-row lg:justify-between"  >
             <div class="order-2 w-full lg:w-[35rem] lg:order-1 ">
                 <h4 class="font-bold text-[1.5rem] lg:text-[4.1rem] lg: mb-[.8rem]">ALWAYS <span class="text-orange-500">FRESS <br> FLOWERS</span></h4>
-                <h5 class="text-[.8rem] lg:text-[1.5rem]">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                <h5 class="text-[.9rem] lg:text-[1.5rem] text-black/50">Indulge your senses with the beauty and fragrance of our fresh flower shop.
                     From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for
                     any occasion. </h>
             </div>
@@ -44,60 +44,60 @@
     </header>
     <main class="mx-[2rem] my-[.5rem] lg:mx-[10rem] lg:my-[2rem]">
         <div class="text-center mb-[3rem]">
-            <h3 class="lg:fort-bold text-[3.1rem]"><Span class="text-orange-500">Our</Span> Plants</h3>
-            <h4 class="text-[1.4rem]">Indulge your senses with the beauty and fragrance of our 
+            <h3 class="font-bold text-[1.5rem] lg:text-[3.1rem]"><Span class="text-orange-500">Our</Span> Plants</h3>
+            <h4 class="text-[.9rem] lg:text-[1.4rem] text-black/50">Indulge your senses with the beauty and fragrance of our 
                 fresh flower shop. From <br>classic roses to exotic blooms, 
                 we offer a wide variety of fresh.</h4>
         </div>
 
-        <div class=" grid grid-cols-4 gap-5">
-            <div class="card text-center w-[17rem]">
+        <div class=" grid grid-cols-2 lg:grid-cols-4 gap-5">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
-            <div class="card text-center w-[17rem]">
+            <div class="card text-center w-[11rem] lg:w-[17rem]">
                 <img src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
-                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-2 ">Add to cart</button>
+                <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1">Add to cart</button>
             </div>
             
         </div>
