--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
             <div>
                 <ul class="flex  list-none text-none gap-[3rem] text-md">
-                    <li class="hidden lg:flex font-bold ">home</li>
-                    <li class="hidden lg:flex text-black/50">shop</li>
-                    <li class="hidden lg:flex text-black/50">about us</li>
+                    <li class="hidden lg:flex font-bold ">Home</li>
+                    <li class="hidden lg:flex text-black/50">Shop</li>
+                    <li class="hidden lg:flex text-black/50">About Us</li>
                     <li><i class="fa-solid fa-cart-shopping"></i> Cart</li>
                 </ul>
             </div>
@@ -31,10 +31,7 @@
             <div class="order-2 w-full lg:w-[35rem] lg:order-1 flex-1">
                 <h4 class="font-bold text-[1.5rem] lg:text-[4.1rem] lg: mb-[.8rem]">ALWAYS <span
                         class="text-orange-500">FRESS <br> FLOWERS</span></h4>
-                <h5 class="text-[.9rem] lg:text-[1.5rem] text-black/50">Indulge your senses with the beauty and
-                    fragrance of our fresh flower shop.
-                    From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for
-                    any occasion. </h>
+                <h5 class="text-[.9rem] lg:text-[1.5rem] text-black/50">Step into a world of color and fragrance at our flower shop, where every bouquet is crafted to inspire joy. From timeless roses to rare and exotic blooms, discover the perfect arrangement to celebrate life's special moments or simply brighten your day.</h5>
             </div>
             <div class="order-1 lg:order-2 flex-1">
                 <img class="w-full" src="assets/hero-flower.png" alt="">
@@ -44,7 +41,7 @@
         </div>
 
     </header>
-    <main class="mx-[2rem] my-[.5rem] lg:mx-[10rem] lg:my-[2rem]">
+    <main class="mx-[2rem] my-[1rem] lg:mx-[10rem] lg:my-[2rem]">
         <div class="text-center mb-[2rem] lg:mb-[3rem]">
             <h3 class="font-bold text-[1.5rem] lg:text-[3.1rem]"><Span class="text-orange-500">Our</Span> Plants</h3>
             <h4 class="text-[.9rem] lg:text-[1.4rem] text-black/50">Indulge your senses with the beauty and fragrance of
@@ -52,7 +49,7 @@
                 we offer a wide variety of fresh.</h4>
         </div>
 
-        <div class=" grid grid-cols-2 lg:grid-cols-4 gap-5 mb-[4rem] lg:mb-[10rem]">
+        <div class=" grid grid-cols-2 lg:grid-cols-4 gap:3 lg:gap-5 mb-[4rem] lg:mb-[10rem] mx-auto">
             <div class="card text-center w-[11rem] lg:w-full">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
@@ -122,7 +119,7 @@
                     src="assets/trusted-badge.png" alt="">
             </div>
             <div class=" lg:ms-[6rem] lg:mt-[2rem] flex-1">
-                <h2 class="font-bold lg:text-[3rem] mb-5">Flower & Plants Lover</h2>
+                <h2 class="font-bold text-[1.5rem] lg:text-[3rem] mb-5">Flower & Plants Lover</h2>
                 <ul class="list-disc ms-5 lg:ms-[3rem]  lg:text-[1.3rem] text-black/50 gap-4">
                     <li class="mb-4 p-1">Our flower shop has built a reputation for reliability and excellence, serving
                         thousands of satisfied customers
