--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
     <div class="relative">
         <img class="h-full w-full object-cover" src="assets/news-letter-bg.png" alt="">
         <div class="absolute inset-0 flex flex-col items-center justify-center ">
-            <h3 class="font-bold text-2xl lg:text-5xl text-white mb-2 lg:mb-5">Join the colorfull branch</h3>
+            <h3 class="font-bold text-2xl lg:text-5xl text-white mb-2 lg:mb-5">Join the colorfull bunch</h3>
             <form class="flex" action="">
-                <input type="text" placeholder="Write email" class="text-black/30 px-3 py-1 font-semibold text-sm bg-white w-[18rem] h-[2rem] lg:w-[45rem] lg:h-[3rem]  focus:outline-none">
-                <button class="bg-orange-500 text-white text-lg w-[6rem] h-[2rem] lg:w-[15rem] lg:h-[3rem]">Subscribe</button>
+                <input type="text" placeholder="Write email" class="text-black/30 px-3 py-1 font-semibold text-sm lg:text-lg bg-white w-[18rem] h-[2rem] lg:w-[45rem] lg:h-[3rem]  focus:outline-none">
+                <button class="bg-orange-500 text-white text-md lg:text-lg w-[6rem] h-[2rem] lg:w-[15rem] lg:h-[3rem]">Subscribe</button>
             </form>
 
         </div>
