--- a/index.html
+++ b/index.html
@@ -49,57 +49,57 @@
                 we offer a wide variety of fresh.</h4>
         </div>
 
-        <div class=" grid grid-cols-2 lg:grid-cols-4 gap:3 lg:gap-5 mb-[4rem] lg:mb-[10rem] mx-auto">
-            <div class="card text-center w-[11rem] lg:w-full">
+        <div class=" grid grid-cols-2 lg:grid-cols-4 gap:6 lg:gap-6 mb-[4rem] lg:mb-[10rem] mx-auto">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
                 <button class="bg-orange-500 w-full text-[1rem] font-semibold text-white p-1 lg:p-2">Add to
                     cart</button>
             </div>
-            <div class="card text-center w-[11rem] lg:w-full">
+            <div class="card text-center w-[10rem] lg:w-full mb-2 p-2">
                 <img class="w-full" src="assets/sample-flower-image.png" alt="">
                 <h4 class="text-[1.3rem] font-medium">Lily Blossom</h4>
                 <h4 class="text-[1.3rem] font-bold">20$</h4>
@@ -193,7 +193,7 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center ">
             <h3 class="font-bold text-2xl lg:text-5xl text-white mb-2 lg:mb-5">Join the colorfull bunch</h3>
             <form class="flex" action="">
-                <input type="text" placeholder="Write email" class="text-black/30 px-3 py-1 font-semibold text-sm lg:text-lg bg-white w-[18rem] h-[2rem] lg:w-[45rem] lg:h-[3rem]  focus:outline-none">
+                <input type="text" placeholder="Write email" class="text-black/30 px-3 py-1 font-semibold text-sm lg:text-lg bg-white w-[16rem] h-[2rem] lg:w-[45rem] lg:h-[3rem]  focus:outline-none">
                 <button class="bg-orange-500 text-white text-md lg:text-lg w-[6rem] h-[2rem] lg:w-[15rem] lg:h-[3rem]">Subscribe</button>
             </form>
 
